@@ -1,3 +1,7 @@
+2006-07-28  Peter Bienstman  <Peter.Bienstman@UGent.be>
+
+	* icache.cpp: Don't delete elements of a list while iterating over it.
+
 2006-07-27  Peter Bienstman  <Peter.Bienstman@UGent.be>
 
 	* camfr_wrap.cpp: Split in two.
